[gd_scene load_steps=14 format=3 uid="uid://bflmhsbk883o7"]

[ext_resource type="Texture2D" uid="uid://dfpwbp73mb8hl" path="res://UI/Sprites/ui_popup_window.png" id="1_fgym1"]
[ext_resource type="Theme" uid="uid://c2k242pbhj3qy" path="res://UI/hud_default_text_theme.tres" id="2_4cpng"]
[ext_resource type="Script" uid="uid://wfutheqrlnse" path="res://UI/popup_window_coin.gd" id="2_se8nt"]
[ext_resource type="Texture2D" uid="uid://dm3h5u40d0rbj" path="res://UI/Sprites/ui_slider_non_interactable.png" id="3_8e0sw"]
[ext_resource type="Texture2D" uid="uid://b8sqb521uosvu" path="res://UI/Sprites/ui_slider_non_interactable_handle.png" id="4_0a4de"]
[ext_resource type="Texture2D" uid="uid://dgi3o7gkikjtm" path="res://UI/Sprites/ui_square_frame.png" id="5_2m0hb"]
[ext_resource type="Texture2D" uid="uid://dvomvetcjl65d" path="res://UI/Sprites/ui_window_close.png" id="6_4cpng"]
[ext_resource type="Texture2D" uid="uid://bwwc45vm4kgus" path="res://UI/Sprites/ui_mini_board_frame.png" id="7_0a4de"]
[ext_resource type="Texture2D" uid="uid://51rsh4nmqd34" path="res://UI/Sprites/ui_mini_clock.png" id="8_2m0hb"]
[ext_resource type="Texture2D" uid="uid://30mbkcgvrqch" path="res://UI/Sprites/ui_hud_button_2.png" id="9_2m0hb"]
[ext_resource type="Theme" uid="uid://btueqn6seahvg" path="res://UI/hud_button_theme.tres" id="10_54hyb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_se8nt"]
size = Vector2(386.5, 58)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7oiki"]

[node name="window_panel_coin" type="TextureRect"]
offset_right = 458.0
offset_bottom = 250.0
texture = ExtResource("1_fgym1")
script = ExtResource("2_se8nt")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(199.75, 29)
shape = SubResource("RectangleShape2D_se8nt")

[node name="title" type="RichTextLabel" parent="."]
clip_contents = false
layout_mode = 0
offset_left = 16.0
offset_top = 8.0
offset_right = 388.0
offset_bottom = 57.0
mouse_filter = 1
mouse_default_cursor_shape = 13
theme = ExtResource("2_4cpng")
theme_override_font_sizes/normal_font_size = 24
text = "Coin Name"
scroll_active = false
autowrap_mode = 0
vertical_alignment = 1

[node name="info" type="RichTextLabel" parent="."]
clip_contents = false
layout_mode = 0
offset_left = 284.0
offset_top = 68.0
offset_right = 441.0
offset_bottom = 166.0
mouse_filter = 2
theme = ExtResource("2_4cpng")
theme_override_constants/line_separation = -24
theme_override_font_sizes/normal_font_size = 20
text = "Location
00:00"
scroll_active = false
autowrap_mode = 0

[node name="slider_bg" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 19.0
offset_top = 68.0
offset_right = 38.0
offset_bottom = 225.0
texture = ExtResource("3_8e0sw")
stretch_mode = 4

[node name="height_slider" type="VSlider" parent="slider_bg"]
layout_mode = 0
offset_left = 1.0
offset_top = 4.0
offset_right = 17.0
offset_bottom = 153.0
theme_override_icons/grabber_disabled = ExtResource("4_0a4de")
theme_override_styles/slider = SubResource("StyleBoxEmpty_7oiki")
step = 0.1
value = 92.0
editable = false
tick_count = 6

[node name="preview_image" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 49.0
offset_top = 68.0
offset_right = 220.0
offset_bottom = 226.0
texture = ExtResource("5_2m0hb")

[node name="close_button" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 398.0
offset_top = 7.0
offset_right = 445.0
offset_bottom = 50.0
tooltip_text = "Close this pop-up window."
texture_normal = ExtResource("6_4cpng")

[node name="frame_icon" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 231.0
offset_top = 66.0
offset_right = 271.0
offset_bottom = 106.0
texture = ExtResource("7_0a4de")
stretch_mode = 3

[node name="clock_icon" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 231.0
offset_top = 99.0
offset_right = 271.0
offset_bottom = 139.0
texture = ExtResource("8_2m0hb")
stretch_mode = 3

[node name="track_button" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 227.0
offset_top = 157.0
offset_right = 436.0
offset_bottom = 226.0
tooltip_text = "Automatically follow this coin."
texture_normal = ExtResource("9_2m0hb")
stretch_mode = 4

[node name="button_text" type="RichTextLabel" parent="track_button"]
clip_contents = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.5
offset_top = -51.0
offset_right = 100.5
offset_bottom = 51.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("10_54hyb")
theme_override_font_sizes/normal_font_size = 42
text = "TRACK"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 0
offset_left = 54.0
offset_top = 72.0
offset_right = 215.0
offset_bottom = 222.0
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
transparent_bg = true
scaling_3d_scale = 0.5
canvas_cull_mask = 4293918720
size = Vector2i(161, 150)

[node name="coin_track_camera" type="Camera3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1)
cull_mask = 1
projection = 1
size = 0.24

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
[connection signal="pressed" from="close_button" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="track_button" to="." method="_on_track_button_pressed"]
